--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,12 @@ body {
 
 .ui {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  /* top: 50%;
+  left: 50%; */
   width: calc(var(--width) * 1px);
-  height: calc(var(--height) * 1px);
-  transform: translate(-50%, -50%) scale(var(--scale, 0));
+  /* height: calc(var(--height) * 1px); */
+  /* transform: translate(-50%, -50%) scale(var(--scale, 0)); */
+  /* transform: scale(var(--scale, 0)); */
   transform-origin: center;
   box-sizing: border-box;
   overflow: hidden;
@@ -39,6 +40,9 @@ body {
 }
 
 .counter{
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -22%) scale(var(--scale, 0));
   justify-content: space-between;
 }
 
@@ -72,7 +76,13 @@ body {
   transition: all o.3s ease-in-out;
   position: fixed;
   bottom: 0;
-  width: 100%;
+  left: 50%;
+  transform: translate(-50%, 22%) scale(var(--scale, 0));
+  /* width: 100%; */
+}
+
+.avatar{
+  padding: 5%;
 }
 
 .show{
