[WIP] Escape function

--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,14 @@ body {
   padding: 5px 30px;
 }
 
-.wave, .turn {
+.wave {
     /* top-left, top-right, bottom-right, bottom-left with x and y value */
   /* Reference from https://developer.mozilla.org/en-US/docs/Web/CSS/basic-shape/polygon */
   clip-path: polygon(0% 0%, 100% 0%, 90% 100%, 0% 100%);
+}
+
+.turn {
+  clip-path: polygon(0% 0%, 100% 0%, 85% 100%, 0% 100%);
 }
 
 .tension {
