--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ body {
   /* width: 100%; */
 }
 
-.back, .skill-list{
+.back, .skill-list, .item-list{
   background-color: black;
   top: unset;
   bottom: 0;
@@ -131,7 +131,7 @@ body {
   background-color: turquoise;
 }
 
-.action,.skill-list{
+.action{
   display: grid;
   grid-template-columns: 33% 33% 33%;
   text-align: center;
