--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,11 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
+.command, .skill-list, .item-list {
+  height: 35%;
+  transform: scale(var(--scale, 0));
+}
+
 .avatar{
   padding: 5%;
 }
