--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 /* @import url('./css/animation.css'); */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+Symbols+2&display=swap');
 
 :root{
   --width: 720;
@@ -72,6 +73,12 @@ body {
 
 .tension {
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 10% 100%);
+}
+
+.arrow-down{
+  font-family: "Noto Sans Symbols 2", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .command{
